samples/_failures_safe/1761178776_ed40b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58dcc843.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_58dcc843.c:155:14: error: ‘STATE_PROCESS’ undeclared (first use in this function); did you mean ‘STATE_PROCESSING’?
  155 |         case STATE_PROCESS
      |              ^~~~~~~~~~~~~
      |              STATE_PROCESSING
./samples/SAFE/__tmp_58dcc843.c:155:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_58dcc843.c:155:9: error: expected ‘:’ or ‘...’ at end of input
  155 |         case STATE_PROCESS
      |         ^~~~
./samples/SAFE/__tmp_58dcc843.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_58dcc843.c:155:9: error: expected declaration or statement at end of input
